syntax = "proto3";

package orca.task.v1;

option go_package = "github.com/davidsbond/orca/internal/proto/orca/task/v1;taskv1";

// The Task type represents the current state of a single task run
message Task {
  string run_id = 1;

  Status status = 2;

  bytes input = 3;

  bytes output = 4;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 1;
  STATUS_SCHEDULED = 2;
  STATUS_RUNNING = 3;
  STATUS_COMPLETE = 4;
  STATUS_FAILED = 5;
}
